# poetry_prj

testprj_poetry/: pyproject.toml
testprj_poetry/tests/: test_testprj_poetry.py
